clusters/lynka/kubernetes/apps/monitoring/grafana/instance/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana
spec:
  endpointSelector:
    matchLabels:
      app: grafana
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana-operator
        - matchLabels:
            app: grafana
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana-operator
        - matchLabels:
            app: grafana
